# django-auth

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  db.db  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: workflow.yml
config/: settings.py  urls.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial_user_migrations.py  0002_update_user_fields.py
