[tool.poetry]
name = "django-blogapi"
version = "0.1.0"
description = "A modular, high performance, headless blogging platform built with Python, \\"
authors = ["Innvvo"]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
pre-commit = "^2.14.0"
codecov = "^2.1.12"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"
django-axes = "^5.20.0"
django-cors-headers = "^3.7.0"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.1"
uritemplate = "^3.0.1"
PyYAML = "^5.4.1"
djangorestframework-simplejwt = "^4.7.2"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
