[tool.poetry]
name = "django-blogapi"
version = "0.1.0"
description = "A modular, high performance, headless blogging platform built with Python, \\"
authors = ["Innvvo"]
license = "BSD 3"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
pre-commit = "^2.19.0"
codecov = "^2.1.12"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
